--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -31,6 +31,10 @@ mat-toolbar{
             background-color: #F51E3C;
             color: white;
             width: 100px;
+            transition: transform 0.5s ease, box-shadow 0.3s ease;
+            &:hover{
+              transform: scale(1.05);
+            }
         }
         
     }
