--- a/src/app/components/signin-or-signup/signin-or-signup.component.scss
+++ b/src/app/components/signin-or-signup/signin-or-signup.component.scss
@@ -39,7 +39,10 @@
         & h5{
             margin-top: 1rem;
             & span{
-                color: #1F426B;
+                color: #00A2FF;
+                font-size: 14px;
+                font-weight: 500;
+                text-decoration: underline;
             }
         }
         & h2{
