--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,38 +1,42 @@
 <div class="container">
-        <mat-stepper #stepper>
-            <mat-step [stepControl]="firstFormGroup" errorMessage="Email is required.">
-              <form [formGroup]="firstFormGroup">
-                <ng-template matStepLabel>Search for Email</ng-template>
-                <mat-form-field>
-                  <mat-label>Search for Email</mat-label>
-                  <input matInput placeholder="nani555@gmal.com" formControlName="firstCtrl" required>
-                </mat-form-field>
-                <div>
-                  <button mat-button matStepperNext>Next</button>
-                </div>
-              </form>
-            </mat-step>
-            <mat-step [stepControl]="secondFormGroup" errorMessage="New Password is required.">
-              <form [formGroup]="secondFormGroup">
-                <ng-template matStepLabel>New Password</ng-template>
-                <mat-form-field>
-                  <mat-label>New Password</mat-label>
-                  <input matInput placeholder="New password" formControlName="secondCtrl"
-                         required>
-                </mat-form-field>
-                <div>
-                  <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button matStepperNext>Next</button>
-                </div>
-              </form>
-            </mat-step>
-            <mat-step>
-              <ng-template matStepLabel>Done</ng-template>
-              <p>You are now done.</p>
-              <div>
-                <button mat-button matStepperPrevious>Back</button>
-                <button mat-button (click)="stepper.reset()">Reset</button>
-              </div>
-            </mat-step>
-          </mat-stepper>
- </div>
+    <mat-stepper #stepper>
+      <!-- Step 1: Search for Email -->
+      <mat-step [stepControl]="firstFormGroup" errorMessage="Email is required.">
+        <ng-template matStepLabel>Search for Email</ng-template>
+        <form [formGroup]="firstFormGroup">
+          <mat-form-field>
+            <mat-label>Search for Email</mat-label>
+            <input matInput placeholder="exam@gmail.com" formControlName="firstCtrl" required>
+          </mat-form-field>
+          <div>
+            <button class="btn-edit" style=" background-color: #F51E3C; color: white; border-radius: 11px; margin-right: 1rem;" mat-flat-button (click)="backSignIn()">Back</button>
+            <button mat-button matStepperNext>Step 2</button>
+          </div>
+        </form>
+      </mat-step>
+  
+      <!-- Step 2: Enter New Password -->
+      <mat-step [stepControl]="secondFormGroup" errorMessage="New Password is required.">
+        <ng-template matStepLabel>New Password</ng-template>
+        <form [formGroup]="secondFormGroup">
+          <mat-form-field>
+            <mat-label>New Password</mat-label>
+            <input matInput placeholder="New password" formControlName="secondCtrl" required>
+          </mat-form-field>
+          <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button matStepperNext>Step 3</button>
+          </div>
+        </form>
+      </mat-step>
+  
+      <!-- Step 3: Done -->
+      <mat-step>
+        <ng-template matStepLabel>Done</ng-template>
+        <div>
+          <button mat-button matStepperPrevious>Back</button>
+          <button style="border-radius: 11px;" mat-flat-button color="primary"(click)="onSubmit()">Reset Password</button>
+        </div>
+      </mat-step>
+    </mat-stepper>
+  </div>
