--- a/src/app/components/vote/vote.component.scss
+++ b/src/app/components/vote/vote.component.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  margin-top: 4rem;
+  margin-top:  2rem;
   & p {
     font-size: 30px;
     text-align: left;
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: -1rem;
   }
 }
 .col {
@@ -116,4 +117,7 @@ hr {
     & p{
         font-size: 20px;
     }
+}
+.setting-select{
+  width: 160px;
 }
